# routes/index.js
@@ -2,7 +2,9 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/', require('./docs'));
-router.use('/books', require('./books'))
+router.use('/clean', require('./cleanBooks'))
+router.use('/fantasy', require('./fantasyBooks'))
+
 
 // routes.get('/', (req, res) => {
 //     res.send('Joshua Watson')
